--- a/ML_Final_Project.ipynb
+++ b/ML_Final_Project.ipynb
@@ -134,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cef1cfb4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load feature names as a csv\n",
+    "# Loads feature names as a csv\n",
     "features = pd.read_csv(\n",
     "    \"UCI HAR Dataset/features.txt\",\n",
     "    sep=r\"\\s+\", # treats spaces as the separators between columns.\n",
